--- a/Temas_optica/Dualidad_onda_particula.html
+++ b/Temas_optica/Dualidad_onda_particula.html
@@ -10,21 +10,31 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+
 </head>
 
 <body>
     <nav class="navbar navbar-expand-md bg-dark py-3" data-bs-theme="dark">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-bezier">
-                        <path fill-rule="evenodd" d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"></path>
-                        <path d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z"></path>
-                    </svg></span><span>Brand</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span
+                    class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><svg
+                        xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
+                        viewBox="0 0 16 16" class="bi bi-bezier">
+                        <path fill-rule="evenodd"
+                            d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z">
+                        </path>
+                        <path
+                            d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z">
+                        </path>
+                    </svg></span><span>Brand</span></a><button data-bs-toggle="collapse" class="navbar-toggler"
+                data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span
+                    class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-5">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="\Optica.html">Optica</a></li>
                     <li class="nav-item"><a class="nav-link active" href="\Acustica.html">Acustica</a></li>
                     <li class="nav-item"><a class="nav-link active" href="\Fisica_moderna.html">Fisica Moderna</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="\Conversor.html">Conversor de Unidades</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="\Conversor.html">Conversor de Unidades</a>
+                    </li>
                     <li class="nav-item"><a class="nav-link active" href="\Sobre_nosotros.html">Sobre nosotros</a></li>
                     <li class="nav-item"><a class="nav-link active" href="\Calculadora.html">Calculadora</a></li>
                 </ul>
@@ -32,17 +42,80 @@
         </div>
     </nav>
     <div class="container py-4 py-xl-5">
-        <div style="background-image:url(&quot;/assets/img/Fondo_Optica.jpg&quot;);height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
-            <div class="d-flex justify-content-center align-items-center" style="height: inherit;min-height: initial;width: 100%;position: absolute;left: 0;background-color: rgba(30,41,99,0.53);">
+        <div
+            style="background-image:url(&quot;/assets/img/Fondo_Optica.jpg&quot;);height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
+            <div class="d-flex justify-content-center align-items-center"
+                style="height: inherit;min-height: initial;width: 100%;position: absolute;left: 0;background-color: rgba(30,41,99,0.53);">
                 <div class="d-flex align-items-center order-5" style="height:200px;">
                     <div class="container">
-                        <h1 class="text-center" style="color:rgb(242,245,248);font-size:56px;font-weight:bold;font-family:Roboto, sans-serif;">DUALIDAD ONDA PARTICULA</h1>
+                        <h1 class="text-center"
+                            style="color:rgb(242,245,248);font-size:56px;font-weight:bold;font-family:Roboto, sans-serif;">
+                            DUALIDAD ONDA PARTICULA</h1>
                     </div>
                 </div>
             </div>
         </div>
-        <p class="text-break">mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm</p></h1>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <h2>onda-partícula</h2>
+        <p>La teoría de la dualidad onda-partícula es un concepto fundamental en física que describe el comportamiento
+            de la luz y las partículas, como los electrones, como si tuvieran propiedades tanto de ondas como de
+            partículas. Esta teoría fue propuesta por primera vez por Albert Einstein y Louis de Broglie, quienes
+            sugirieron que la luz y las partículas podrían exhibir un comportamiento ondulatorio, como la interferencia
+            y la difracción, así como un comportamiento similar a las partículas, como la reflexión y la refracción.
+            (¿La Luz Es Una Partícula O Una Onda? | Olympus LS, n.d.). La teoría de la dualidad onda-partícula es una
+            piedra angular de la mecánica cuántica, que describe el comportamiento de las partículas a nivel atómico y
+            subatómico. Según esta teoría, las partículas pueden existir en un estado de superposición, donde tienen
+            simultáneamente propiedades ondulatorias y partículares. Este comportamiento se demuestra en experimentos
+            como el experimento de la doble rendija, donde las partículas que pasan a través de dos rendijas crean un
+            patrón de interferencia, lo que indica su comportamiento ondulatorio. Sin embargo, cuando se observan
+            partículas, aparecen como puntos discretos, lo que indica su comportamiento similar a una partícula.
+            (Ciencia XL, 2020).</p>
+        <p>La teoría de la dualidad onda-partícula es un concepto fundamental en física que describe el comportamiento
+            de la luz y las partículas, como los electrones, como si tuvieran propiedades tanto de ondas como de
+            partículas. Esta teoría fue propuesta por primera vez por Albert Einstein y Louis de Broglie, quienes
+            sugirieron que la luz y las partículas podrían exhibir un comportamiento ondulatorio, como la interferencia
+            y la difracción, así como un comportamiento similar a las partículas, como la reflexión y la refracción.
+            (¿La Luz Es Una Partícula O Una Onda? | Olympus LS, n.d.). La teoría de la dualidad onda-partícula es una
+            piedra angular de la mecánica cuántica, que describe el comportamiento de las partículas a nivel atómico y
+            subatómico. Según esta teoría, las partículas pueden existir en un estado de superposición, donde tienen
+            simultáneamente propiedades ondulatorias y partículares. Este comport
+        <p>La teoría de la dualidad onda-partícula es un concepto fundamental en física que describe el comportamiento
+            de la luz y las partículas, como los electrones, como si tuvieran propiedades tanto de ondas como de
+            partículas. Esta teoría fue propuesta por primera vez por Albert Einstein y Louis de Broglie, quienes
+            sugirieron que la luz y las partículas podrían exhibir un comportamiento ondulatorio, como la interferencia
+            y la difracción, así como un comportamiento similar a las partículas, como la reflexión y la refracción.
+            (¿La Luz Es Una Partícula O Una Onda? | Olympus LS, n.d.). La teoría de la dualidad onda-partícula es una
+            piedra angular de la mecánica cuántica, que describe el comportamiento de las partículas a nivel atómico y
+            subatómico. Según esta teoría, las partículas pueden existir en un estado de superposición, donde tienen
+            simultáneamente propiedades ondulatorias y partículares. Este comportamiento se demuestra en experimentos
+            como el experimento de la doble rendija, donde las partículas que pasan a través de dos rendijas crean un
+            patrón de interferencia, lo que indica su comportamiento ondulatorio. Sin embargo, cuando se observan
+            partículas, aparecen como puntos discretos, lo que indica su comportamiento similar a una partícula.
+            (Ciencia XL, 2020).</p>
+        <p>La teoría de la dualidad onda-partícula es un concepto fundamental en física que describe el comportamiento
+            de la luz y las partículas, como los electrones, como si tuvieran propiedades tanto de ondas como de
+            partículas. Esta teoría fue propuesta por primera vez por Albert Einstein y Louis de Broglie, quienes
+            sugirieron que la luz y las partículas podrían exhibir un comportamiento ondulatorio, como la interferencia
+            y la difracción, así como un comportamiento similar a las partículas, como la reflexión y la refracción.
+            (¿La Luz Es Una Partícula O Una Onda? | Olympus LS, n.d.). La teoría de la dualidad onda-partícula es una
+            piedra angular de la mecánica cuántica, que describe el comportamiento de las partículas a nivel atómico y
+            subatómico. Según esta teoría, las partículas pueden existir en un estado de superposición, donde tienen
+            simultáneamente propiedades ondulatorias y partículares. Este comportamiento se demuestra en experimentos
+            como el experimento de la doble rendija, donde las partículas que pasan a través de dos rendijas crean un
+            patrón de interferencia, lo que indica su comportamiento ondulatorio. Sin embargo, cuando se observan
+            partículas, aparecen como puntos discretos, lo que indica su comportamiento similar a una partícula.
+            (Ciencia XL, 2020).</p>
+        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen2.png" alt="Texto alternativo de la imagen">
+        <p>(La Doble Rendija. -Experimento.- — Steemit, n.d.)</p>
+        <p>La teoría de la dualidad onda-partícula tiene implicaciones importantes para nuestra comprensión de la
+            naturaleza de la realidad. Sugiere que el comportamiento de las partículas no está determinado por sus
+            propiedades intrínsecas, sino por la forma en que se observan y miden.</p>
+        <p>Ciencia XL. (2020, May 24). Dualidad onda-partícula: ¡No es como crees! | Física cuántica 1 [Video]. YouTube.
+            https://www.youtube.com/watch?v=-VuGGd8rw_k
+            ¿La luz es una partícula o una onda? | Olympus LS. (n.d.).
+            https://www.olympus-lifescience.com/es/microscope-resource/primer/lightandcolor/particleorwave/
+            La doble rendija. -Experimento.- — Steemit. (n.d.). Steemit.
+            https://steemit.com/spanish/@luiscd8a/la-doble-rendija-experimento</p>
+
+    </div>
+
+    <p class="text-break"></p>
