--- a/Temas_fisica_moderna/Introduccion_a_la_fisica.html
+++ b/Temas_fisica_moderna/Introduccion_a_la_fisica.html
@@ -9,21 +9,31 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+
 </head>
 
 <body>
     <nav class="navbar navbar-expand-md bg-dark py-3" data-bs-theme="dark">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-bezier">
-                        <path fill-rule="evenodd" d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"></path>
-                        <path d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z"></path>
-                    </svg></span><span>Brand</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span
+                    class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><svg
+                        xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
+                        viewBox="0 0 16 16" class="bi bi-bezier">
+                        <path fill-rule="evenodd"
+                            d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z">
+                        </path>
+                        <path
+                            d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z">
+                        </path>
+                    </svg></span><span>Brand</span></a><button data-bs-toggle="collapse" class="navbar-toggler"
+                data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span
+                    class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-5">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="\Optica.html">Optica</a></li>
                     <li class="nav-item"><a class="nav-link active" href="\Acustica.html">Acustica</a></li>
                     <li class="nav-item"><a class="nav-link active" href="\Fisica_moderna.html">Fisica Moderna</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="\Conversor.html">Conversor de Unidades</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="\Conversor.html">Conversor de Unidades</a>
+                    </li>
                     <li class="nav-item"><a class="nav-link active" href="\Sobre_nosotros.html">Sobre nosotros</a></li>
                     <li class="nav-item"><a class="nav-link active" href="\Calculadora.html">Calculadora</a></li>
                 </ul>
@@ -31,39 +41,44 @@
         </div>
     </nav>
     <div class="container py-4 py-xl-5">
-        <div style="background-image:url(&quot;/assets/img/Fondo_Fisica.jpg&quot;);height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
-            <div class="d-flex justify-content-center align-items-center" style="height: inherit;min-height: initial;width: 100%;position: absolute;left: 0;background-color: rgba(30,41,99,0.53);">
+        <div
+            style="background-image:url(&quot;/assets/img/Fondo_Fisica.jpg&quot;);height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
+            <div class="d-flex justify-content-center align-items-center"
+                style="height: inherit;min-height: initial;width: 100%;position: absolute;left: 0;background-color: rgba(30,41,99,0.53);">
                 <div class="d-flex align-items-center order-5" style="height:200px;">
                     <div class="container">
-                        <h1 class="text-center" style="color:rgb(242,245,248);font-size:56px;font-weight:bold;font-family:Roboto, sans-serif;">INTRODUCCION</h1>
+                        <h1 class="text-center"
+                            style="color:rgb(242,245,248);font-size:56px;font-weight:bold;font-family:Roboto, sans-serif;">
+                            INTRODUCCION</h1>
                     </div>
                 </div>
             </div>
         </div>
-        <p class="text-break"><h2>La física moderna</h2>
-            <p>La física moderna, establecida a principios del siglo XX, se centra en el estudio de las escalas más pequeñas
-                y más grandes del universo, desde partículas y átomos hasta galaxias y el cosmos. Esta rama de la física se
-                define por su exploración de las fuerzas fundamentales que gobiernan el universo y el comportamiento de la
-                materia y la energía en los extremos de velocidad, temperatura y densidad.</p>
-            <p>Dos teorías principales caracterizan la física moderna: la mecánica cuántica y la relatividad. La mecánica
-                cuántica, un marco matemático, describe el comportamiento de la materia y la energía a niveles atómico y
-                subatómico, introduciendo la dualidad onda-partícula y la cuantificación. La relatividad, desarrollada por
-                Albert Einstein, cambia nuestra comprensión del espacio, el tiempo y la gravedad, revelando que el
-                espacio-tiempo es un continuo de cuatro dimensiones y el tiempo es relativo.</p>
-            <p>La física moderna también examina las fuerzas fundamentales, incluido el electromagnetismo, la gravedad y las
-                fuerzas nucleares fuerte y débil. Estas fuerzas son cruciales para comprender el comportamiento de la
-                materia y la energía en las escalas más pequeñas y la estructura y evolución del universo en las escalas más
-                grandes.</p>
-            <p>En la física moderna se utilizan modelos matemáticos complejos y validación experimental para estudiar la
-                materia y la energía. Los físicos utilizan ecuaciones matemáticas complejas para describir el comportamiento
-                de partículas y campos y se basan en experimentos sofisticados para probar sus predicciones. Este enfoque ha
-                dado lugar a numerosos descubrimientos, como el bosón de Higgs, que confirma la existencia del campo de
-                Higgs y aporta más pruebas del modelo estándar de física de partículas.</p>
-            <p>En esencia, la física moderna es una rama de la física que explora el comportamiento de la materia y la
-                energía en los extremos de escala, velocidad, temperatura y densidad. Se caracteriza por las teorías de la
-                mecánica cuántica y la relatividad, que han alterado fundamentalmente nuestra comprensión del espacio, el
-                tiempo y la materia. El estudio de la física moderna también implica la exploración de las fuerzas
-                fundamentales que gobiernan el universo, con intrincados modelos matemáticos y validación experimental que
-                traspasan los límites del conocimiento y la comprensión humanos.
-            </p>
+        <p class="text-break">
+        <h2>La física moderna</h2>
+        <p>La física moderna, establecida a principios del siglo XX, se centra en el estudio de las escalas más pequeñas
+            y más grandes del universo, desde partículas y átomos hasta galaxias y el cosmos. Esta rama de la física se
+            define por su exploración de las fuerzas fundamentales que gobiernan el universo y el comportamiento de la
+            materia y la energía en los extremos de velocidad, temperatura y densidad.</p>
+        <p>Dos teorías principales caracterizan la física moderna: la mecánica cuántica y la relatividad. La mecánica
+            cuántica, un marco matemático, describe el comportamiento de la materia y la energía a niveles atómico y
+            subatómico, introduciendo la dualidad onda-partícula y la cuantificación. La relatividad, desarrollada por
+            Albert Einstein, cambia nuestra comprensión del espacio, el tiempo y la gravedad, revelando que el
+            espacio-tiempo es un continuo de cuatro dimensiones y el tiempo es relativo.</p>
+        <p>La física moderna también examina las fuerzas fundamentales, incluido el electromagnetismo, la gravedad y las
+            fuerzas nucleares fuerte y débil. Estas fuerzas son cruciales para comprender el comportamiento de la
+            materia y la energía en las escalas más pequeñas y la estructura y evolución del universo en las escalas más
+            grandes.</p>
+        <p>En la física moderna se utilizan modelos matemáticos complejos y validación experimental para estudiar la
+            materia y la energía. Los físicos utilizan ecuaciones matemáticas complejas para describir el comportamiento
+            de partículas y campos y se basan en experimentos sofisticados para probar sus predicciones. Este enfoque ha
+            dado lugar a numerosos descubrimientos, como el bosón de Higgs, que confirma la existencia del campo de
+            Higgs y aporta más pruebas del modelo estándar de física de partículas.</p>
+        <p>En esencia, la física moderna es una rama de la física que explora el comportamiento de la materia y la
+            energía en los extremos de escala, velocidad, temperatura y densidad. Se caracteriza por las teorías de la
+            mecánica cuántica y la relatividad, que han alterado fundamentalmente nuestra comprensión del espacio, el
+            tiempo y la materia. El estudio de la física moderna también implica la exploración de las fuerzas
+            fundamentales que gobiernan el universo, con intrincados modelos matemáticos y validación experimental que
+            traspasan los límites del conocimiento y la comprensión humanos.
+        </p>
         </p>
