--- a/Temas_acustica/Esfuerzo.html
+++ b/Temas_acustica/Esfuerzo.html
@@ -74,4 +74,12 @@
             <p><strong>Diseño de aeronaves:</strong> La comprensión de esfuerzos en alas, fuselajes y otros componentes
                 estructurales de aeronaves es vital para garantizar su seguridad y desempeño durante el vuelo (Ballesteros
                 et al., 2018).</p>
+                <p>Avendaño, C., & Benites, R. (2016). Introducción a la ingeniería mecánica (2ª ed.). McGraw-Hill.
+                    Beer, J. R., & Johnston, D. F. (2019). Mecánica de materiales (8ª ed.). McGraw-Hill.
+                    Ballesteros, J. M., López, M. A., & Santolaya, F. J. (2018). Diseño estructural de aeronaves (2ª ed.).
+                    Paraninfo.
+                    González Carcelés, J. (2007). Análisis de estructuras (2ª ed.). Ediciones UPC.
+                    Salazar Trujillo, J. E. (2007). Diseño de elementos mecánicos (2ª ed.). Ediciones Uninorte.
+                    Sears, F. W., & Zemansky, M. J. (2010). Física para universitarios (12ª ed.). Vol. I: Mecánica.
+                    Addison-Wesley.</p>
     </p>
