--- a/Temas_optica/Dispersion_de_la_luz.html
+++ b/Temas_optica/Dispersion_de_la_luz.html
@@ -9,31 +9,21 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-
+   
 </head>
 
 <body>
     <nav class="navbar navbar-expand-md bg-dark py-3" data-bs-theme="dark">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span
-                    class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><svg
-                        xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
-                        viewBox="0 0 16 16" class="bi bi-bezier">
-                        <path fill-rule="evenodd"
-                            d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z">
-                        </path>
-                        <path
-                            d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z">
-                        </path>
-                    </svg></span><span>Brand</span></a><button data-bs-toggle="collapse" class="navbar-toggler"
-                data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span
-                    class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-bezier">
+                        <path fill-rule="evenodd" d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"></path>
+                        <path d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z"></path>
+                    </svg></span><span>Brand</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-5">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="\Optica.html">Optica</a></li>
                     <li class="nav-item"><a class="nav-link active" href="\Acustica.html">Acustica</a></li>
                     <li class="nav-item"><a class="nav-link active" href="\Fisica_moderna.html">Fisica Moderna</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="\Conversor.html">Conversor de Unidades</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link active" href="\Conversor.html">Conversor de Unidades</a></li>
                     <li class="nav-item"><a class="nav-link active" href="\Sobre_nosotros.html">Sobre nosotros</a></li>
                     <li class="nav-item"><a class="nav-link active" href="\Calculadora.html">Calculadora</a></li>
                 </ul>
@@ -41,39 +31,29 @@
         </div>
     </nav>
     <div class="container py-4 py-xl-5">
-        <div
-            style="background-image:url(&quot;/assets/img/Fondo_Optica.jpg&quot;);height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
-            <div class="d-flex justify-content-center align-items-center"
-                style="height: inherit;min-height: initial;width: 100%;position: absolute;left: 0;background-color: rgba(30,41,99,0.53);">
+        <div style="background-image:url(&quot;/assets/img/Fondo_Optica.jpg&quot;);height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
+            <div class="d-flex justify-content-center align-items-center" style="height: inherit;min-height: initial;width: 100%;position: absolute;left: 0;background-color: rgba(30,41,99,0.53);">
                 <div class="d-flex align-items-center order-5" style="height:200px;">
                     <div class="container">
-                        <h1 class="text-center"
-                            style="color:rgb(242,245,248);font-size:56px;font-weight:bold;font-family:Roboto, sans-serif;">
-                            DISPERSION DE LA LUZ</h1>
+                        <h1 class="text-center" style="color:rgb(242,245,248);font-size:56px;font-weight:bold;font-family:Roboto, sans-serif;">DISPERSION DE LA LUZ</h1>
                     </div>
                 </div>
             </div>
         </div>
-        <p class="text-break">
-        <h2>Difracción de la luz</h2>
-        <p>La difracción de la luz se refiere a la curvatura o dispersión de ondas de luz cuando pasan a través de una
-            abertura o alrededor del borde de un objeto, lo que resulta en una distorsión visible del camino de la luz.
-            Este fenómeno fue descubierto por primera vez por el físico y astrónomo italiano Francesco Grimaldi a
-            mediados del siglo XVI, quien lo denominó "difracción" porque la luz emitida por una fuente se separa en
-            fracciones cuando se interpone un cuerpo opaco.</p>
-        <p>Cuando la luz pasa a través de una abertura estrecha o alrededor del borde de un objeto, las ondas se curvan
-            y se extienden, creando un patrón de áreas brillantes y oscuras. Esto se debe al hecho de que las ondas de
-            luz interfieren entre sí, ya sea de forma constructiva o destructiva, dependiendo de su relación de fase. La
-            cantidad de curvatura que se produce depende del tamaño de la apertura o del objeto en relación con la
-            longitud de onda de la luz. Cuando la apertura es grande, la cantidad de difracción puede ser
-            insignificante, pero cuando es pequeña, el efecto se puede ver fácilmente a simple vista.</p>
-        <p>Los efectos de la luz difractada suelen aparecer como bandas de diferente brillo o color, provocadas por la
-            interferencia de las ondas de luz. La difracción es un concepto fundamental en óptica y tiene muchas
-            aplicaciones prácticas, como en el diseño de instrumentos ópticos y el estudio de fenómenos ondulatorios.
-            También está muy relacionado con el fenómeno de la interferencia, que se produce cuando dos o más ondas de
-            luz se superponen e interactúan entre sí.</p>
-        </p>
-        <p>Qué es la difracción de la luz | Iluminet revista de iluminación. (2022, March 29). Iluminet Revista De
-            Iluminación. https://iluminet.com/que-es-la-difraccion-de-la-luz/
-            Leskow, E. C. (2022, October 5). Luz: historia, velocidad, refracción y características. Enciclopedia
-            Humanidades. https://humanidades.com/luz/</p>
+        <p class="text-break"><h2>Difracción de la luz</h2>
+            <p>La difracción de la luz se refiere a la curvatura o dispersión de ondas de luz cuando pasan a través de una
+                abertura o alrededor del borde de un objeto, lo que resulta en una distorsión visible del camino de la luz.
+                Este fenómeno fue descubierto por primera vez por el físico y astrónomo italiano Francesco Grimaldi a
+                mediados del siglo XVI, quien lo denominó "difracción" porque la luz emitida por una fuente se separa en
+                fracciones cuando se interpone un cuerpo opaco.</p>
+            <p>Cuando la luz pasa a través de una abertura estrecha o alrededor del borde de un objeto, las ondas se curvan
+                y se extienden, creando un patrón de áreas brillantes y oscuras. Esto se debe al hecho de que las ondas de
+                luz interfieren entre sí, ya sea de forma constructiva o destructiva, dependiendo de su relación de fase. La
+                cantidad de curvatura que se produce depende del tamaño de la apertura o del objeto en relación con la
+                longitud de onda de la luz. Cuando la apertura es grande, la cantidad de difracción puede ser
+                insignificante, pero cuando es pequeña, el efecto se puede ver fácilmente a simple vista.</p>
+            <p>Los efectos de la luz difractada suelen aparecer como bandas de diferente brillo o color, provocadas por la
+                interferencia de las ondas de luz. La difracción es un concepto fundamental en óptica y tiene muchas
+                aplicaciones prácticas, como en el diseño de instrumentos ópticos y el estudio de fenómenos ondulatorios.
+                También está muy relacionado con el fenómeno de la interferencia, que se produce cuando dos o más ondas de
+                luz se superponen e interactúan entre sí.</p></p>
