--- a/Temas_optica/Espectro_electromagnetico.html
+++ b/Temas_optica/Espectro_electromagnetico.html
@@ -84,37 +84,17 @@
         : con longitud de onda inferior a 10^-2 m y frecuencia superior a 3x10^8.</li>
         <li>Ondas de radio: con una longitud de onda inferior a 1 m y una frecuencia superior a 300x10^6.</li>
         </ul>
-        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen1.png" alt="imagen 1">
+        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen1.png" alt="imagen 1” >
         <p>(Leskow, 2021)</p>
-        <p>Las regiones del espectro electromagnético son los rayos gamma, los rayos X, la radiación ultravioleta, la
-            luz visible, las microondas y las ondas de radio. Los usos del espectro electromagnético son diversos. Por
-            ejemplo:
+        <p>Las regiones del espectro electromagnético son los rayos gamma, los rayos X, la radiación ultravioleta, la luz visible, las microondas y las ondas de radio. Los usos del espectro electromagnético son diversos. Por ejemplo:
         <ul>
-            <li>Ondas de radio: utilizadas para transmitir información a través del aire, como señales de radio,
-                televisión o Wi-Fi.</li>
-            <li>Microondas: se utilizan para transmitir información, como señales o antenas de teléfonos móviles
-                (celulares), y para calentar alimentos en hornos microondas.</li>
-            <li>Radiación ultravioleta: emitida por el Sol y absorbida por las plantas para la fotosíntesis, así como
-                por nuestra piel cuando nos bronceamos. También alimenta tubos fluorescentes y permite la existencia de
-                instalaciones como solariums.</li>
-            <li>Radiación infrarroja: transmite el calor del Sol a nuestro planeta, de un fuego a los objetos que lo
-                rodean, o de un calentador al interior de nuestras habitaciones.</li>
-            <li>Luz visible: hace visibles las cosas. También se puede utilizar para otros mecanismos visuales como
-                cine, linternas, etc.</li>
-            <li>Rayos X: se utilizan en medicina para tomar imágenes visuales del interior de nuestro cuerpo, como de
-                nuestros huesos, mientras que los rayos gamma, mucho más violentos, se utilizan como forma de
-                radioterapia o tratamiento contra el cáncer, ya que destruyen el ADN de las células. que se reproducen
-                desordenadamente.</li>
+        <li>Ondas de radio: utilizadas para transmitir información a través del aire, como señales de radio, televisión o Wi-Fi.</li>  
+        <li>Microondas: se utilizan para transmitir información, como señales o antenas de teléfonos móviles (celulares), y para calentar alimentos en hornos microondas.</li>
+        <li>Radiación ultravioleta: emitida por el Sol y absorbida por las plantas para la fotosíntesis, así como por nuestra piel cuando nos bronceamos. También alimenta tubos fluorescentes y permite la existencia de instalaciones como solariums.</li>
+        <li>Radiación infrarroja: transmite el calor del Sol a nuestro planeta, de un fuego a los objetos que lo rodean, o de un calentador al interior de nuestras habitaciones.</li>
+        <li>Luz visible: hace visibles las cosas. También se puede utilizar para otros mecanismos visuales como cine, linternas, etc.</li>
+        <li>Rayos X: se utilizan en medicina para tomar imágenes visuales del interior de nuestro cuerpo, como de nuestros huesos, mientras que los rayos gamma, mucho más violentos, se utilizan como forma de radioterapia o tratamiento contra el cáncer, ya que destruyen el ADN de las células. que se reproducen desordenadamente.</li>
         </ul>
-        El espectro electromagnético es un rango continuo y prácticamente infinito, pero hasta ahora hemos podido
-        conocer algunas de sus regiones, conocidas como bandas o segmentos. Estas regiones son, de longitudes de onda
-        más cortas a más largas: rayos gamma, rayos X, radiación ultravioleta, luz visible, radiación infrarroja,
-        microondas y ondas de radio. Cada región tiene diferentes propiedades y usos, y se distingue por el
-        comportamiento de sus ondas durante la emisión, transmisión y absorción. El espectro electromagnético es un
-        concepto fundamental en física y tiene numerosas aplicaciones en diversos campos, desde la medicina hasta las
-        telecomunicaciones.</p>
-        <p>Leskow, E. C. (2021, July 15). Espectro Electromagnético - Concepto, regiones, usos e importancia. Concepto.
-            https://concepto.de/espectro-electromagnetico/
-            Alberto Arzate. (2020, July 6). INTRODUCCIÓN a LA ÓPTICA [Video]. YouTube.
-            https://www.youtube.com/watch?v=rMR9SiD5hw8</p>
-    </div>
+        El espectro electromagnético es un rango continuo y prácticamente infinito, pero hasta ahora hemos podido conocer algunas de sus regiones, conocidas como bandas o segmentos. Estas regiones son, de longitudes de onda más cortas a más largas: rayos gamma, rayos X, radiación ultravioleta, luz visible, radiación infrarroja, microondas y ondas de radio. Cada región tiene diferentes propiedades y usos, y se distingue por el comportamiento de sus ondas durante la emisión, transmisión y absorción. El espectro electromagnético es un concepto fundamental en física y tiene numerosas aplicaciones en diversos campos, desde la medicina hasta las telecomunicaciones.</p>
+        </div>
+        
