--- a/Optica.html
+++ b/Optica.html
@@ -16,11 +16,39 @@
 
         .card:hover {
             transform: scale(1.05);
+
         }
+        .estrellas {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: -1;
+        }
+
+        .estrella {
+            position: absolute;
+            background-color: #ffffff; /* Color blanco para las estrellas */
+            width: 2px;
+            height: 2px;
+            border-radius: 50%;
+            animation: twinkling 3s infinite;
+        }
+
+        @keyframes twinkling {
+            0% { opacity: 1; }
+            50% { opacity: 0.5; }
+            100% { opacity: 1; }
+        }
+
+
     </style>
 </head>
 
-<body>
+<body style="background-color: rgb(24, 3, 44);">
+    <div class="estrellas"></div> 
     <nav class="navbar navbar-expand-md bg-dark py-3" data-bs-theme="dark">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-bezier">
                         <path fill-rule="evenodd" d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"></path>
@@ -85,6 +113,26 @@
         </div>
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script>
+        //ESTRELLAAAAAAAS
+        const estrellasContainer = document.querySelector('.estrellas');
+        const numEstrellas = 200; // Número de estrellas
+        for (let i = 0; i < numEstrellas; i++) {
+            const estrella = document.createElement('div');
+            estrella.classList.add('estrella');
+            const x = Math.random() * window.innerWidth;
+            const y = Math.random() * window.innerHeight;
+            const duracion = Math.random() * 2 + 1;
+            const tamano = Math.random() * 2;
+            estrella.style.left = `${x}px`;
+            estrella.style.top = `${y}px`;
+            estrella.style.width = `${tamano}px`;
+            estrella.style.height = `${tamano}px`;
+            estrella.style.animationDuration = `${duracion}s`;
+            estrellasContainer.appendChild(estrella);
+        }
+
+    </script>
 </body>
 
 </html>
