--- a/Videos.html
+++ b/Videos.html
@@ -5,6 +5,31 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Fisica</title>
+    <style>.estrellas {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+        z-index: -1;
+    }
+
+    .estrella {
+        position: absolute;
+        background-color: #ffffff; /* Color blanco para las estrellas */
+        width: 2px;
+        height: 2px;
+        border-radius: 50%;
+        animation: twinkling 3s infinite;
+    }
+
+    @keyframes twinkling {
+        0% { opacity: 1; }
+        50% { opacity: 0.5; }
+        100% { opacity: 1; }
+    }
+</style>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/css/Articles-Cards-images.css">
@@ -16,21 +41,10 @@
     <link rel="stylesheet" href="assets/css/Videos-in-rows-2-and-3-videos-per-row.css">
 </head>
 
-<body>
+<body style="background-color: rgb(24, 3, 44);">
+    <div class="estrellas"></div> 
     <nav class="navbar navbar-expand-md bg-dark py-3" data-bs-theme="dark">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span
-                    class="d-flex justify-content-center align-items-center bs-icon-sm bs-icon-rounded bs-icon-primary me-2 bs-icon"><svg
-                        xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
-                        viewbox="0 0 16 16" class="bi bi-bezier">
-                        <path fill-rule="evenodd"
-                            d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z">
-                        </path>
-                        <path
-                            d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z">
-                        </path>
-                    </svg></span><span>Brand</span></a><button data-bs-toggle="collapse" data-bs-target="#navcol-5"
-                class="navbar-toggler"><span class="visually-hidden">Toggle navigation</span><span
-                    class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span class="d-flex justify-content-center align-items-center bs-icon-sm bs-icon-rounded bs-icon-primary me-2 bs-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewbox="0 0 16 16" class="bi bi-bezier"><path fill-rule="evenodd" d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"></path><path d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z"></path></svg></span><span>Brand</span></a><button data-bs-toggle="collapse" data-bs-target="#navcol-5" class="navbar-toggler"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-5">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="Optica.html">Optica</a></li>
@@ -44,15 +58,11 @@
         </div>
     </nav>
     <div class="container py-4 py-xl-5">
-        <div
-            style="background-image:url(&quot;assets/img/Fondo_Optica.jpg&quot;);height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
-            <div class="d-flex justify-content-center align-items-center"
-                style="height:inherit;min-height:initial;width:100%;position:absolute;left:0;background-color:rgba(30,41,99,0.53);">
+        <div style="background-image:url(&quot;assets/img/Fondo_Optica.jpg&quot;);height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
+            <div class="d-flex justify-content-center align-items-center" style="height:inherit;min-height:initial;width:100%;position:absolute;left:0;background-color:rgba(30,41,99,0.53);">
                 <div class="d-flex align-items-center order-5" style="height:200px;">
                     <div class="container">
-                        <h1 class="text-center"
-                            style="color:rgb(242,245,248);font-size:56px;font-weight:bold;font-family:Roboto, sans-serif;">
-                            FORMULAS PARA LA OPTICA</h1>
+                        <h1 class="text-center" style="color:rgb(242,245,248);font-size:56px;font-weight:bold;font-family:Roboto, sans-serif;">FORMULAS PARA LA OPTICA</h1>
                     </div>
                 </div>
             </div>
@@ -62,49 +72,30 @@
                 <div class="container">
                     <div class="block-heading" style=" text-align: center; ">
                         <h2 class="text-info">Videos</h2>
+                        <p>Aquí habrán videos, hay 2 formatos:<br></p>
                     </div>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-sm-12 col-md-6 col-lg-4" style="border-style: none;">
-                                <div class="card clean-card text-center">
-                                    <iframe allowfullscreen="" frameborder="0"
-                                        src="https://www.youtube.com/embed/chNNaBLX-Hw" style="height: 200px;"></iframe>
-                                    <div class="card-body info">
-                                        <h4 class="card-title">Video 1</h4>
-                                        <p class="card-text">Óptica</p>
-                                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-sm-12 col-md-6 col-lg-4" style="border-style: none;">
+                            <div class="card clean-card text-center"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube-nocookie.com/embed/7aipHynsoLo" style="height: 200px;"></iframe>
+                                <div class="card-body info">
+                                    <h4 class="card-title">Video 1</h4>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                 </div>
                             </div>
-                            <div class="col-sm-12 col-md-6 col-lg-4" style="border-style: none;">
-                                <div class="card clean-card text-center">
-                                    <iframe allowfullscreen="" frameborder="0"
-                                        src="https://www.youtube.com/embed/rMR9SiD5hw8" style="height: 200px;"></iframe>
-                                    <div class="card-body info">
-                                        <h4 class="card-title">Video 2</h4>
-                                        <p class="card-text">Ondas electromagnéticas y otros conceptos</p>
-                                    </div>
+                        </div>
+                        <div class="col-sm-12 col-md-6 col-lg-4" style="border-style: none;">
+                            <div class="card clean-card text-center"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube-nocookie.com/embed/gSPlAW44bXQ" style="height: 200px;"></iframe>
+                                <div class="card-body info">
+                                    <h4 class="card-title">Video 2</h4>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                 </div>
                             </div>
-                            <div class="col-sm-12 col-md-6 col-lg-4" style="border-style: none;">
-                                <div class="card clean-card text-center">
-                                    <iframe allowfullscreen="" frameborder="0"
-                                        src="https://www.youtube-nocookie.com/embed/qcq13_3g9BM"
-                                        style="height: 200px;"></iframe>
-                                    <div class="card-body info">
-                                        <h4 class="card-title">Video 3</h4>
-                                        <p class="card-text">Refracción y reflexión de la luz</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-12 col-md-6 col-lg-4" style="border-style: none;">
-                                <div class="card clean-card text-center">
-                                    <iframe allowfullscreen="" frameborder="0"
-                                        src="https://www.youtube-nocookie.com/embed/CsMRnoFDCMc"
-                                        style="height: 200px;"></iframe>
-                                    <div class="card-body info">
-                                        <h4 class="card-title">Video 4</h4>
-                                        <p class="card-text">Polarización</p>
-                                    </div>
+                        </div>
+                        <div class="col-sm-12 col-md-6 col-lg-4" style="border-style: none;">
+                            <div class="card clean-card text-center"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube-nocookie.com/embed/f1Cx54yr_hE" style="height: 200px;"></iframe>
+                                <div class="card-body info">
+                                    <h4 class="card-title">Video 3</h4>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                 </div>
                             </div>
                         </div>
@@ -117,6 +108,24 @@
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/Dynamically-Queue-Videos-Dynamically_Queue_Videos.js"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
+    <script>//ESTRELLAAAAAAAS
+        const estrellasContainer = document.querySelector('.estrellas');
+        const numEstrellas = 200; // Número de estrellas
+        for (let i = 0; i < numEstrellas; i++) {
+            const estrella = document.createElement('div');
+            estrella.classList.add('estrella');
+            const x = Math.random() * window.innerWidth;
+            const y = Math.random() * window.innerHeight;
+            const duracion = Math.random() * 2 + 1;
+            const tamano = Math.random() * 2;
+            estrella.style.left = `${x}px`;
+            estrella.style.top = `${y}px`;
+            estrella.style.width = `${tamano}px`;
+            estrella.style.height = `${tamano}px`;
+            estrella.style.animationDuration = `${duracion}s`;
+            estrellasContainer.appendChild(estrella);
+        }
+</script>
 </body>
 
 </html>
